--- a/index.html
+++ b/index.html
@@ -1,39 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MVP LifeLine AI App</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header class="header">
-    <h1>MVP LifeLine AI App</h1>
-    <p class="tagline">Earn. Heal. Grow.</p>
-    <select id="language" aria-label="Select Language">
-      <option value="en">English</option>
-      <option value="ha">Hausa</option>
-      <option value="ig">Igbo</option>
-      <option value="yo">Yoruba</option>
-      <option value="sw">Swahili</option>
-      <option value="fr">French</option>
-      <option value="ar">Arabic</option>
-      <option value="zu">Zulu</option>
-      <option value="pg">Pidgin</option>
-    </select>
-    <button id="dark-toggle" aria-label="Toggle Dark Mode">🌙</button>
-  </header>
-
-  <main class="container">
-    <section class="greeting" aria-label="App Greeting">
-      <h2>Welcome, Hope,<br><span>Let’s grow today.</span></h2>
-    </section>
-
-    <div id="speech-output" class="speech-box" aria-label="Speech Result">
-      <p><strong>Voice Input:</strong> <span id="speech-text">[Waiting for input...]</span></p>
-    </div>
-
-    <div class="modules-grid" aria-label="Modules Section">
-      <section id="career-zone" class="card"><h3>📁 Career Zone</h3><p>Explore jobs, build your CV, and prepare for interviews.</p></section>
-      <section id="emotional-zone" class="card"><h3>💔 Emotional Zone</h3><p>Track your emotions, write in your journal, and get mental health tools.</p></section>
-      <section id="smartq-access" class="card"><h3>🤖 SmartQ Access</h3><p>Ask your questions and get instant AI-powered answers.</p></section>
+<div class="modules-grid" aria-label="Modules Section">
+  <section id="career-zone" class="card"><h3>📁 Career Zone</h3><p>Explore jobs, build your CV, and prepare for interviews.</p></section>
+  <section id="emotional-zone" class="card"><h3>💔 Emotional Zone</h3><p>Track your emotions, write in your journal, and get mental health tools.</p></section>
+  <section id="smartq-access" class="card"><h3>🤖 SmartQ Access</h3><p>Ask your questions and get instant AI-powered answers.</p></section>
+  <section id="dual-mode-ai" class="card"><h3>🧠 Dual Mode AI</h3><p>Switch between Career or Emotional AI support whenever you need it.</p></section>
+  <section id="digital-hustle-hub" class="card"><h3>💼 Digital Hustle Hub</h3><p>Find online gigs, digital tools, and freelancing opportunities.</p></section>
+  <section id="partner-zone" class="card"><h3>🤝 Partner Zone</h3><p>Connect with mentors, NGOs, and communities that can support you.</p></section>
+</div>
