--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,6 +22,7 @@
       <option value="zu">Zulu</option>
       <option value="pg">Pidgin</option>
     </select>
+    <button id="dark-toggle" aria-label="Toggle Dark Mode">🌙</button>
   </header>
 
   <main class="container">
@@ -28,37 +30,23 @@
       <h2>Welcome, Hope,<br><span>Let’s grow today.</span></h2>
     </section>
 
-    <div class="modules-grid" aria-label="Modules Section">
-      <section id="career-zone" class="card" aria-label="Career Zone">
-        <h3>📁 Career Zone</h3>
-        <p>Explore jobs, build your CV, and prepare for interviews.</p>
-      </section>
-
-      <section id="emotional-zone" class="card" aria-label="Emotional Zone">
-        <h3>💔 Emotional Zone</h3>
-        <p>Track your emotions, write in your journal, and get mental health tools.</p>
-      </section>
-
-      <section id="smartq-access" class="card" aria-label="SmartQ Access">
-        <h3>🤖 SmartQ Access</h3>
-        <p>Ask your questions and get instant AI-powered answers.</p>
-      </section>
-
-      <section id="dual-mode-ai" class="card" aria-label="Dual Mode AI">
-        <h3>🧠 Dual Mode AI</h3>
-        <p>Switch between Career or Emotional AI support whenever you need it.</p>
-      </section>
-
-      <section id="digital-hustle-hub" class="card" aria-label="Digital Hustle Hub">
-        <h3>💼 Digital Hustle Hub</h3>
-        <p>Find online gigs, digital tools, and freelancing opportunities.</p>
-      </section>
-
-      <section id="partner-zone" class="card" aria-label="Partner Zone">
-        <h3>🤝 Partner Zone</h3>
-        <p>Connect with mentors, NGOs, and communities that can support you.</p>
-      </section>
+    <div id="speech-output" class="speech-box" aria-label="Speech Result">
+      <p><strong>Voice Input:</strong> <span id="speech-text">[Waiting for input...]</span></p>
     </div>
+
+    <div class="modules-grid" aria-label="Modules Section">
+      <section class="card"><h3>📁 Career Zone</h3><p>Explore jobs, build your CV, and prepare for interviews.</p></section>
+      <section class="card"><h3>💔 Emotional Zone</h3><p>Track your emotions, write in your journal, and get mental health tools.</p></section>
+      <section class="card"><h3>🤖 SmartQ Access</h3><p>Ask your questions and get instant AI-powered answers.</p></section>
+      <section class="card"><h3>🧠 Dual Mode AI</h3><p>Switch between Career or Emotional AI support whenever you need it.</p></section>
+      <section class="card"><h3>💼 Digital Hustle Hub</h3><p>Find online gigs, digital tools, and freelancing opportunities.</p></section>
+      <section class="card"><h3>🤝 Partner Zone</h3><p>Connect with mentors, NGOs, and communities that can support you.</p></section>
+    </div>
+
+    <section id="gpt-reply-box" class="card" style="display: none; margin-top: 2rem;">
+      <h3>🤖 SmartQ says:</h3>
+      <p id="gpt-reply-text">...</p>
+    </section>
   </main>
 
   <button id="mic-btn" aria-label="Microphone Button">🎤</button>
@@ -70,4 +58,3 @@
   <script src="app.js"></script>
 </body>
 </html>
-
